# python-switchbot

./: setup.cfg
switchbot_not_colliding/: __init__.py  devices_not_colliding.py  remotes.py
